fix vertical alignment of duration in group join by code

--- a/src/app/modules/group/components/group-join-by-code/group-join-by-code.component.scss
+++ b/src/app/modules/group/components/group-join-by-code/group-join-by-code.component.scss
@@ -120,6 +120,5 @@
 }
 .duration-form-group {
   display: flex;
-  align-items: flex-end;
-  transform: translateY(-0.75rem);
+  align-items: center;
 }
